--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,7 +11,7 @@ bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/TwinStickCPP/Maps/TwinStickExampleMap
+GameDefaultMap=/Game/Menu.Menu
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Script/TrainJamAIE.TrainJamAIEGameMode
 GlobalDefaultServerGameMode=None
@@ -69,5 +69,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
