--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/TwinStickCPP/Maps/TwinStickExampleMap
+EditorStartupMap=/Game/TwinStickCPP/Maps/MainMap.MainMap
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
