-Added FibreOpticInstance.h -Building broken on home PC

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Script/TrainJamAIE.FibreOpticInstance
 GameDefaultMap=/Game/Menu.Menu
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Script/TrainJamAIE.TrainJamAIEGameMode
